Regression: Resizing an image is not correctly reflected in the image editor until the UI is updated #96324

Closed
opened 2022-03-11 07:15:54 +01:00 by Alaska · 12 comments
Member

System Information
Operating system: Linux-5.16.0-3-amd64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54

Blender Version
Broken version: 3.2.0 Alpha, branch: master, commit date: 2022-03-11 04:29, hash: f6564df351
Broken version: 3.1 Release
Worked: All versions prior to commit 5e9c1feb8a

Short description of error
Resizing an image in the image editor will not update correct. A correct update will occur once the UI is changed. This may be related to #96312 (Regression: Image Editor Flip option isn't working) and #96323 (Regression: Invert colour is not reflected in the image viewer until a UI change )

Here is a video demonstrating the issue:
Resize not updating.mp4

Exact steps for others to reproduce the error

  1. Load an image in the image editor.
  2. Select from the top {nav Image > Resize} and change the size of the image.
  3. Notice how the image has not been properly updated. Split the editor and the image will update to the correct result.
**System Information** Operating system: Linux-5.16.0-3-amd64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54 **Blender Version** Broken version: 3.2.0 Alpha, branch: master, commit date: 2022-03-11 04:29, hash: `f6564df351` Broken version: 3.1 Release Worked: All versions prior to commit 5e9c1feb8a **Short description of error** Resizing an image in the image editor will not update correct. A correct update will occur once the UI is changed. This may be related to #96312 (Regression: Image Editor Flip option isn't working) and #96323 (Regression: Invert colour is not reflected in the image viewer until a UI change ) Here is a video demonstrating the issue: [Resize not updating.mp4](https://archive.blender.org/developer/F12920753/Resize_not_updating.mp4) **Exact steps for others to reproduce the error** 1. Load an image in the image editor. 2. Select from the top {nav Image > Resize} and change the size of the image. 3. Notice how the image has not been properly updated. Split the editor and the image will update to the correct result.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Author
Member

CC @Jeroen-Bakker as you worked on a fix for a similar issue.

CC @Jeroen-Bakker as you worked on a fix for a similar issue.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Worked: Presumably prior to 507a4deef1

Not this time :)
This is actually broke between eb0f8317e2 - eabdcdcd44

> Worked: Presumably prior to 507a4deef1 Not this time :) This is actually broke between eb0f8317e231 - eabdcdcd44b9
Author
Member

You're right, it is caused by 5e9c1feb8a instead

You're right, it is caused by 5e9c1feb8a instead

Added subscriber: @FrancoisRoussel-3

Added subscriber: @FrancoisRoussel-3
Member

Following change fixes the issue for me. This is same as the fix of #96163

index 3721ea81c04..b48ec4be24c 100644
    - a/source/blender/editors/space_image/image_ops.c
+++ b/source/blender/editors/space_image/image_ops.c
@@ -2992,7 +2992,7 @@ static int image_scale_exec(bContext *C, wmOperator *op)

ED_image_undo_push_end();


/* Force GPU re-upload, all image is invalid. */

- BKE_image_free_gputextures(ima);
+  BKE_image_partial_update_mark_full_update(ima);

DEG_id_tag_update(&ima->id, 0);
WM_event_add_notifier(C, NC_IMAGE | NA_EDITED, ima);```

Following change fixes the issue for me. This is same as the fix of #96163 ```diff --git a/source/blender/editors/space_image/image_ops.c b/source/blender/editors/space_image/image_ops.c index 3721ea81c04..b48ec4be24c 100644 - a/source/blender/editors/space_image/image_ops.c +++ b/source/blender/editors/space_image/image_ops.c @@ -2992,7 +2992,7 @@ static int image_scale_exec(bContext *C, wmOperator *op) ``` ED_image_undo_push_end(); ``` ``` /* Force GPU re-upload, all image is invalid. */ ``` - BKE_image_free_gputextures(ima); + BKE_image_partial_update_mark_full_update(ima); ``` DEG_id_tag_update(&ima->id, 0); WM_event_add_notifier(C, NC_IMAGE | NA_EDITED, ima);```
Philipp Oeser changed title from Resizing an image is not correctly reflected in the image editor until the UI is updated to Regression: Resizing an image is not correctly reflected in the image editor until the UI is updated 2022-03-22 16:06:24 +01:00
Jeroen Bakker was assigned by Dalai Felinto 2022-03-25 16:10:53 +01:00

This issue was referenced by f6e2c9bc97

This issue was referenced by f6e2c9bc97d297dab2b8926fae1689ca1807bb7c

This issue was referenced by 2fc77071b5

This issue was referenced by 2fc77071b51a7c3ee16c50836d380ed339681992
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96324
No description provided.