Image editor: not updating after image operation.

Fixes T96324, T96312, T96323